--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.19",
     "path": "^0.12.7"
   }
