--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "concurrently": "^7.4.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
-    "nodemailer": "^6.4.6",
+    "nodemailer": "^6.8.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.19",
     "path": "^0.12.7"
