--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "googleapis": "^108.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "nodemailer": "^6.8.0",
