--- a/package.json
+++ b/package.json
@@ -22,12 +22,19 @@
     "crypto": "^1.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "googleapis": "^108.0.0",
+    "googleapis": "^110.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "nodemailer": "^6.8.0",
-    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.19",
     "path": "^0.12.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FamutimiEmmanuel/school-portal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FamutimiEmmanuel/school-portal/issues"
+  },
+  "homepage": "https://github.com/FamutimiEmmanuel/school-portal#readme"
 }
